# ZeroShot-VoiceClone

./: .gitignore  README.md  pyproject.toml  script.txt
src/zero_shot_voiceclone/: __init__.py  cli.py  domain.py  engine.py  text.py
src/zero_shot_voiceclone/backends/: __init__.py  base.py  qwen.py  registry.py  xtts.py
tests/: test_backends.py  test_cli.py  test_engine.py  test_text.py
